# bears

./: .markdownlint.json  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml  justfile
.github/workflows/: release.yml
bears/src/: command.rs  lib.rs  main.rs
bears/src/value/: mod.rs  sets.rs
bears_ecology/: Cargo.toml
bears_ecology/src/: app.rs  config.rs  free.rs  history.rs  json.rs  lib.rs  progress.rs  queue.rs  request.rs  tracker.rs  validate.rs
bears_health/: Cargo.toml
bears_health/cave/: naics_category.csv  naics_industry.csv  naics_sector.csv  naics_subcategory.csv  naics_subsector.csv
bears_health/src/: aocs.rs  components.rs  data.rs  datasets.rs  fa_codes.rs  histories.rs  iip.rs  indicators.rs  industry_codes.rs  investments.rs  io_codes.rs  json.rs  lib.rs  naics.rs  parameter_values.rs  parameters.rs  queues.rs  values.rs
bears_health/tests/: unit.rs
bears_species/: Cargo.toml
bears_species/src/: data.rs  dataset.rs  error.rs  free.rs  lib.rs  method.rs  parameter.rs  parameter_value.rs  request.rs  results.rs
bears_species/src/key_sets/: fixed_assets.rs  gdp_by_industry.rs  iip.rs  input_output.rs  intl_serv_sta.rs  intl_serv_trade.rs  ita.rs  metadata.rs  mne.rs  mod.rs  nipa.rs  regional.rs
bears_species/src/keys/: affiliation.rs  aoc_sta.rs  area_or_country.rs  channel.rs  component.rs  fixed_asset_table.rs  frequency.rs  indicator.rs  industry.rs  input_output_code.rs  input_output_table.rs  investment.rs  measure.rs  mod.rs  numeric.rs  row_code.rs  service.rs  state.rs  table_name.rs  trade.rs  year.rs
bears_species/src/keys/naics/: category.rs  core.rs  industry.rs  input_output.rs  item.rs  mod.rs  sector.rs  subcategory.rs  subsector.rs  supplement.rs
benches/: loading.rs  with_event.rs
data/: naics_codes.csv
src/: app.rs  command.rs  config.rs  data.rs  dataset.rs  error.rs  free.rs  geofips.rs  getdata.rs  getparameterlist.rs  getparametervalues.rs  history.rs  json.rs  lib.rs  linecode.rs  main.rs  method.rs  naics.rs  parameter.rs  parameter_value.rs  progress.rs  queue.rs  request.rs  results.rs  user.rs
src/check/: data.rs  datasets.rs  errors.rs  helpers.rs  histories.rs  indicators.rs  mod.rs  parameter_values.rs  parameters.rs  queues.rs  values.rs
src/key_sets/: fixed_assets.rs  mod.rs  nipa.rs
src/keys/: annotation.rs  millions.rs  mod.rs  owner.rs  selection.rs  state.rs  table_name.rs  year.rs
src/value/: fixed_assets.rs  footnote.rs  frequency.rs  gdp_by_industry.rs  geofips.rs  investment.rs  ita.rs  kind.rs  linecode.rs  millions.rs  mne.rs  mod.rs  nipa.rs  numeric.rs  owner.rs  row_code.rs  selection.rs  sets.rs  state.rs  table_name.rs  year.rs
tests/: unit.rs
