[package]
name = "bears"
version = "0.1.5"
edition = "2024"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
description = "A Rust wrapper for the Bureau of Economic Analysis (BEA) REST API."
readme = "README.md"
repository = "https://github.com/crumplecup/bears"
license = "Apache-2.0"
keywords = ["economics", "finance", "rest"]
categories = ["asynchronous", "finance"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bears"

[features]
api = []

[dependencies]
assert-json-diff = "2.0.2"
bytesize = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
console = "0.15.11"
convert_case = "0.8.0"
csv = "1.3.1"
derive-getters = "0.5.0"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
derive_setters = "0.1.6"
dotenvy = "0.15.7"
indicatif = { version = "0.17.11", features = ["rayon", "tokio"] }
jiff = { version = "0.2.5", features = ["serde"] }
nom = "8.0.0"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
similar = { version = "2.7.0", features = ["serde"] }
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
  "json",
] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1.0.97"
criterion = "0.5.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bench]]
name = "with_event"
harness = false
