[workspace]
resolver = "2"
members = ["bears_ecology", "bears_health", "bears", "bears_species"]

[workspace.package]
version = "0.1.11"
edition = "2024"
authors = ["Erik Rose <erik.w.rose@gmail.com>"]
description = "A Rust wrapper for the Bureau of Economic Analysis (BEA) REST API."
readme = "README.md"
repository = "https://github.com/crumplecup/bears"
license = "Apache-2.0"
keywords = ["economics", "finance", "rest"]
categories = ["asynchronous", "finance"]

[workspace.dependencies]
bears_ecology = { version = "0.1.11", path = "./bears_ecology" }
bears_health = { version = "0.1.11", path = "./bears_health" }
bears = { version = "0.1.11", path = "./bears" }
bears_species = { version = "0.1.11", path = "./bears_species" }
assert-json-diff = "2.0.2"
bytesize = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }
console = "0.16.0"
convert_case = "0.8.0"
csv = "1.3.1"
derive-getters = "0.5.0"
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
derive_setters = "0.1.8"
dotenvy = "0.15.7"
indicatif = { version = "0.18.0", features = ["rayon", "tokio"] }
jiff = { version = "0.2.15", features = ["serde"] }
nom = "8.0.0"
rand = "0.9.2"
rayon = "1.10.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
similar = { version = "2.7.0", features = ["serde"] }
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
tokio = { version = "1.47.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-serde = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
  "json",
] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
