[package]
name = "bears_species"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
readme = "../README.md"
# homepage.workspace = true
# rust-version.workspace = true

[dependencies]
csv = { workspace = true }
convert_case = { workspace = true }
derive-getters = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
derive_setters = { workspace = true }
indicatif = { workspace = true }
jiff = { workspace = true }
nom = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
